--- a/monolith-coolstore-app/pom.xml
+++ b/monolith-coolstore-app/pom.xml
@@ -13,32 +13,23 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.redhat.coolstore</groupId>
+		<artifactId>monolith-coolstore</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
 	<groupId>com.redhat.coolstore</groupId>
-	<artifactId>monolith-coolstore</artifactId>
+	<artifactId>monolith-coolstore-app</artifactId>
 	<version>6.3.0.GA</version>
 	<packaging>war</packaging>
-	<name>monolith-coolstore</name>
-	<description>monolith-coolstore</description>
+	<name>monolith-coolstore-app</name>
+	<description>monolith-coolstore-app</description>
 
 	<properties>
-		<!-- Explicitly declaring the source encoding eliminates the following 
-			message: -->
-		<!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
-			resources, i.e. build is platform dependent! -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-		<!-- JBoss dependency versions -->
-
 		<version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
-
 		<version.jboss.spec.javaee.6.0>3.0.2.Final-redhat-13</version.jboss.spec.javaee.6.0>
-
-		<!-- other plugin versions -->
 		<version.war.plugin>2.1.1</version.war.plugin>
-
-		<!-- maven-compiler-plugin -->
-		<maven.compiler.target>1.6</maven.compiler.target>
-		<maven.compiler.source>1.6</maven.compiler.source>
 		<version.postgresql>42.0.0</version.postgresql>
 	</properties>
 
@@ -120,6 +111,12 @@
 			<groupId>org.infinispan</groupId>
 			<artifactId>infinispan-client-hotrod</artifactId>
 			<version>7.1.0.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.example.proprietary</groupId>
+			<artifactId>custom-annotations</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
