--- a/custom-annotations/pom.xml
+++ b/custom-annotations/pom.xml
@@ -9,10 +9,9 @@
 	</parent>
 	
 	<groupId>com.example.proprietary</groupId>
-	<artifactId>custom-annotations</artifactId>
+	<artifactId>proprietary-annotations</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>custom-annotations</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
