ShoppingCartServiceTest added, refactored ShoppingCartService, renamed InventoryTest & CatalogTest

--- a/monolith-coolstore-app/pom.xml
+++ b/monolith-coolstore-app/pom.xml
@@ -120,6 +120,18 @@
 			<version>6.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>com.example.proprietary</groupId>
