--- a/custom-annotations/pom.xml
+++ b/custom-annotations/pom.xml
@@ -8,17 +8,7 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	
-	<groupId>com.example.proprietary</groupId>
+	<groupId>com.proprietary</groupId>
 	<artifactId>proprietary-annotations</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<url>http://maven.apache.org</url>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
 </project>
