--- a/monolith-coolstore-app/pom.xml
+++ b/monolith-coolstore-app/pom.xml
@@ -120,21 +120,9 @@
 			<version>6.0</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.8</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.shrinkwrap.resolver</groupId>
-			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-			<scope>test</scope>
-		</dependency>
 
 		<dependency>
-			<groupId>com.example.proprietary</groupId>
+			<groupId>com.proprietary</groupId>
 			<artifactId>proprietary-annotations</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
@@ -157,6 +145,19 @@
 			<artifactId>arquillian-protocol-servlet</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<version>3.0.19.Final</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.eclipsesource.minimal-json</groupId>
+			<artifactId>minimal-json</artifactId>
+			<version>0.9.4</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
