added resources for postgresql

--- a/modern-coolstore/etc/gogs-persistent-template.yaml
+++ b/modern-coolstore/etc/gogs-persistent-template.yaml
@@ -87,6 +87,8 @@ objects:
           resources:
             limits:
               memory: 512Mi
+            requests:
+              memory: 100Mi
           volumeMounts:
           - mountPath: /var/lib/pgsql/data
             name: gogs-postgres-data
