updated the swagger base path for catalog

--- a/modern-coolstore/catalog-service/src/main/resources/META-INF/swarm.swagger.conf
+++ b/modern-coolstore/catalog-service/src/main/resources/META-INF/swarm.swagger.conf
@@ -3,4 +3,4 @@ license: Apache 2.0
 title: Catalog Service REST API
 version: 1.0.0
 packages: com.redhat.coolstore.catalog.rest
-root: /api
+root: /catalog
