--- a/monolith-coolstore/pom.xml
+++ b/monolith-coolstore/pom.xml
@@ -5,7 +5,6 @@
   <artifactId>monolith-coolstore</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>monolith-coolstore</name>
   <url>http://maven.apache.org</url>
   <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,41 +14,7 @@
 
 
 	<modules>
-		<module>custom-annotations</module>
-		<module>monolith-coolstore</module>
+		<module>proprietary-annotations</module>
+		<module>monolith-coolstore-service</module>
 	</modules>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
-    <profiles>
-        <profile>
-            <id>openshift</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <version>2.6</version>
-                        <configuration>
-                            <webResources>
-                                <resource>
-                                    <directory>${basedir}/src/main/webapp/WEB-INF</directory>
-                                    <filtering>true</filtering>
-                                    <targetPath>WEB-INF</targetPath>
-                                </resource>
-                            </webResources>
-                            <outputDirectory>deployments</outputDirectory>
-                            <warName>ROOT</warName>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
