related to redhat-gpe/appmod_migration#25

--- a/modern-coolstore/catalog-service/pom.xml
+++ b/modern-coolstore/catalog-service/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.redhat.coolstore</groupId>
 	<artifactId>catalog-service</artifactId>
@@ -15,6 +16,19 @@
 		<version.postgresql>9.4.1207</version.postgresql>
 		<version.fabric8-maven-plugin>3.5.28</version.fabric8-maven-plugin>
 	</properties>
+	<repositories>
+		<repository>
+			<id>redhat-ga</id>
+			<url>https://maven.repository.redhat.com/ga/</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>redhat</id>
+			<url>https://maven.repository.redhat.com/ga/</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -138,7 +152,7 @@
 								<config>
 									<wildfly-swarm>
 										<fromMode>isTag</fromMode>
-										<from>redhat-openjdk18-openshift:1.3</from>
+										<from>redhat-openjdk18-openshift:1.2</from>
 									</wildfly-swarm>
 								</config>
 								<excludes>
