--- a/modern-coolstore/inventory-service/pom.xml
+++ b/modern-coolstore/inventory-service/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.redhat.coolstore</groupId>
 	<artifactId>inventory-service</artifactId>
@@ -20,6 +21,15 @@
 		<version.war.plugin>2.1.1</version.war.plugin>
 
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>redhat-ga</id>
+			<url>https://maven.repository.redhat.com/ga/</url>
+		</repository>
+		
+	</repositories> 
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
