related to redhat-gpe/appmod_migration#27

--- a/monolith-coolstore/monolith-coolstore-service/pom.xml
+++ b/monolith-coolstore/monolith-coolstore-service/pom.xml
@@ -31,6 +31,13 @@
 		<version.h2>1.4.187</version.h2>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>redhat-ga</id>
+			<url>https://maven.repository.redhat.com/ga/</url>
+		</repository>
+	</repositories>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
