--- a/modern-coolstore/catalog-service/src/main/fabric8/deployment.yml
+++ b/modern-coolstore/catalog-service/src/main/fabric8/deployment.yml
@@ -32,10 +32,17 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /app/config
+            - name: rhsso-config
+              mountPath: /app/rhsso-config
           env:
             - name: JAVA_OPTIONS
-              value: "-Dswarm.project.stage.file=file:///app/config/project-defaults.yml"              
+              value: "-Dswarm.project.stage.file=file:///app/config/project-defaults.yml -Dswarm.keycloak.json.path=/app/rhsso-config/keycloak.json"      
+            - name: GC_MAX_METASPACE_SIZE
+              value: '200'        
       volumes:
         - configMap:
             name: app-config
           name: config
+        - configMap:
+            name: catalog-service-rhsso
+          name: rhsso-config  
