--- a/modern-coolstore/catalog-service/src/main/resources/project-local.yml
+++ b/modern-coolstore/catalog-service/src/main/resources/project-local.yml
@@ -6,3 +6,13 @@ swarm:
         connection-url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
         user-name: sa
         password: sa
+  deployment:
+    catalog-service.war: 
+      web: 
+        login-config: 
+          auth-method: KEYCLOAK
+        security-constraints: 
+          - url-pattern: /catalog/*
+            methods: [GET]
+            roles: [coolstore]
+  
