removed the proprietary annotation dependency

--- a/monolith-coolstore/pom.xml
+++ b/monolith-coolstore/pom.xml
@@ -14,7 +14,7 @@
 
 
 	<modules>
-		<module>proprietary-annotations</module>
+		<!-- <module>proprietary-annotations</module> -->
 		<module>monolith-coolstore-service</module>
 	</modules>
 </project>
