testcases with coolstore-test realm

--- a/modern-coolstore/catalog-service/src/main/resources/project-local.yml
+++ b/modern-coolstore/catalog-service/src/main/resources/project-local.yml
@@ -14,5 +14,5 @@ swarm:
         security-constraints: 
           - url-pattern: /catalog/*
             methods: [GET]
-            roles: [coolstore]
+            roles: [coolstore-test]
   
