--- a/modern-coolstore/cart-service/src/main/resources/application.properties
+++ b/modern-coolstore/cart-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=cart-service
-cxf.path=/
+cxf.path=/api
 cxf.jaxrs.component-scan=true
 cxf.jaxrs.classes-scan-packages=com.redhat.coolstore.cart.rest
