--- a/modern-coolstore/catalog-service/pom.xml
+++ b/modern-coolstore/catalog-service/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<version.wildfly.swarm>7.0.0.redhat-8</version.wildfly.swarm>
+		<version.wildfly.swarm>7.1.0.redhat-77</version.wildfly.swarm>
 		<version.wildfly.swarm.community>2018.4.1</version.wildfly.swarm.community>
 		<version.postgresql>9.4.1207</version.postgresql>
 		<version.fabric8-maven-plugin>3.5.28</version.fabric8-maven-plugin>
@@ -84,6 +84,7 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
 			<scope>test</scope>
+			<version>3.5.1.Final</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -125,6 +126,7 @@
 				<dependency>
 					<groupId>com.h2database</groupId>
 					<artifactId>h2</artifactId>
+					<version>1.4.196</version>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -152,7 +154,7 @@
 								<config>
 									<wildfly-swarm>
 										<fromMode>isTag</fromMode>
-										<from>redhat-openjdk18-openshift:1.2</from>
+										<from>redhat-openjdk18-openshift:1.4</from>
 									</wildfly-swarm>
 								</config>
 								<excludes>
