--- a/monolith-coolstore/monolith-coolstore-service/pom.xml
+++ b/monolith-coolstore/monolith-coolstore-service/pom.xml
@@ -107,6 +107,7 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>2.3.10.Final</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
